fix: increase spacing for intro headline

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -241,6 +241,8 @@ p {
 
 	.headline {
 		max-width: 75%;
+		margin-bottom: 20px;
+		margin-top: 28px;
 	}
 
 	.seperator {
